<resources>
    <string name="app_name">carmonic</string>
    <string name="action_settings">Settings</string>
    <string name="carmonic">carmonic</string>
    <string name="Register">Register</string>
    <string name="SignIn">Sign In</string>
    <string name="Next">Next</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_sign_up">sign_up</string>
    <string name="title_activity_sign_in">sign_in</string>
    <string name="title_activity_sign_up2">sign_up2</string>
    <string name="billing_info_str"><u>Billing Information</u></string>
    <string name="billing_rider_msg">We hope we are able to help</string>
    <string name="billing_total_amount_msg">&#160;&#160;<i>Your <u>total</u> of ₦%d has been charged to \n &#160;your card <u>ending with %s</u></i></string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_with_location_confirmed">Map</string>

    <string name="service">%s</string>
    <string name="price">₦%d</string>
    <string name="One_moment_please">One moment please...</string>
    <string name="confirm_location">Confirm your location</string>
    <string name="click_more_address">Click on the address to edit</string>
    <string name="title_activity_confirm_location_layout">ConfirmLocationLayout</string>
    <string name="title_activity_additional_information_layout">Additional Information</string>
    <string name="add_more">Give the mechanic some useful info</string>
    <string name="title_activity_amazon_test">AmazonTest</string>


    <!--Fetch Address-->
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="google_map_key">AIzaSyAkWJ1pkiUSJAAU7BM9AuM9dkWzR--h4VE</string>

    <string name="rating_msg">You gave xxxx a yyyy star rating:</string>
    <string name="rating_note_header">Here’s the note you left for xxxxx:</string>
    <string name="rating_note">Thanks for being on time! You were so friendly and helpful!</string>

    <string name="bottom_note">Your total of #6788 has was charged card ending with 7789</string>
    <string name="title_activity_add_payment">AddPayment</string>

    <string name="_card_expiry_format">%1$02d / %2$d</string>
    <string name="title_activity_testactivity">Map</string>

</resources>
