<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <LinearLayout
            android:id="@+id/coordinatorLayout2"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="top"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:background="@drawable/grad_hom"
            >


            <TextView
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="left"
                android:text="X"
                android:textColor="@color/colorYellow"
                android:textStyle="normal"
                android:textSize="20dp"
                />


            <LinearLayout
                android:id="@+id/infoPanel"
                android:layout_below="@+id/cancel_action"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:visibility="visible"
                android:layout_gravity="top"
                android:gravity="top|center"
                >



                <TextView
                    android:id="@+id/txtCustomerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_picture"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/confirm_location"
                    android:textColor="@color/colorYellow"
                    android:textSize="20dp"
                    android:textStyle="bold" />



                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/container"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="40dp"

                    android:layout_marginRight="40dp"
                    android:fontFamily="@fonts/GlacialIndifferenceRegular"
                    android:gravity="center"
                    android:text="@string/click_more_address"
                    android:textColor="#B9B9B9"
                    android:textSize="15dp" />



                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="80dp"
                    android:orientation="vertical">



                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview3"
                        style="@style/large_code_face"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:elevation="1dp"
                        app:cardBackgroundColor="@color/colorBlueHeader"
                        >
                        <LinearLayout
                            android:id="@+id/vLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            >


                            <LinearLayout
                                android:id="@+id/ll_head_bar1"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:paddingLeft="5dp"
                                android:layout_gravity="center"
                                android:layout_weight="00"
                                android:background="@android:color/transparent"
                                android:gravity="left">

                                <ImageView
                                    android:id="@+id/imageView"
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center"
                                    android:contentDescription="@string/nav_header_desc"
                                    app:srcCompat="@drawable/ic_location_on" />



                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/ll_head_bar"
                                android:layout_gravity="center"
                                android:layout_weight="80"
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"
                                android:background="@android:color/transparent"
                                android:gravity="center"
                                android:padding="5dp">



                                <AutoCompleteTextView
                                    android:id="@+id/txtMyLocation"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="#00ffffff"
                                    android:enabled="true"
                                    android:hint="48B Moloney Borough, Ojuelegba"
                                    android:lineHeight="17sp"
                                    android:textColor="@color/colorYellow"
                                    android:textSize="15sp"
                                    android:textStyle="normal" />


                            </LinearLayout>


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>







                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@+id/txtTimer"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="40dp"
                    android:gravity = "bottom"
                    android:background="@android:color/transparent"
                    android:padding="5dp">


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnNext"
                        style="@style/home_page_button"
                        android:layout_width="99dp"
                        android:layout_height="37dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="48dp"
                        android:background="@drawable/register_button"
                        android:layout_alignParentRight="true"
                        android:textStyle="bold"
                        android:text="@string/Next"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />



                </RelativeLayout>


            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</LinearLayout>